# SearchConc

./: README.md  SearchConc.cabal
src/: Main.hs
